--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
